--- a/TestForAnger/app/build.gradle
+++ b/TestForAnger/app/build.gradle
@@ -40,7 +40,10 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
-    compile 'com.android.support:appcompat-v7:23.1.1'
+
+    compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'io.github.kobakei:ratethisapp:1.0.3'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
 }
 
