--- a/TestForAnger/app/src/main/AndroidManifest.xml
+++ b/TestForAnger/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+        <!-- This meta-data tag is required to use Google Play Services. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
@@ -26,5 +30,10 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="7f9b0bed83c712f5ad9e7b72ce908221db8f3513" />
+
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
     </application>
 </manifest>
