--- a/TestForAnger/app/build.gradle
+++ b/TestForAnger/app/build.gradle
@@ -19,12 +19,21 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
+    signingConfigs {
+        release {
+            storeFile file('keystore.jks')
+            storePassword '30January'
+            keyAlias "30January"
+            keyPassword '30January'
+        }
+    }
+
     defaultConfig {
         applicationId "team.megabyte.testforanger"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
     }
     buildTypes {
         release {
