--- a/TestForAnger/app/src/main/AndroidManifest.xml
+++ b/TestForAnger/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:allowBackup="true"
         android:name=".MyApp"
-        android:icon="@drawable/icon"
+        android:icon="@drawable/icon_test"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
