--- a/TestForAnger/app/build.gradle
+++ b/TestForAnger/app/build.gradle
@@ -17,7 +17,7 @@ repositories {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     signingConfigs {
         release {
@@ -53,6 +53,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'io.github.kobakei:ratethisapp:1.0.3'
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.google.android.gms:play-services-ads:9.6.1'
+    compile 'com.google.android.gms:play-services-location:9.6.1'
+    
 }
 
